--- a/mappingDir.ipynb
+++ b/mappingDir.ipynb
@@ -32,12 +32,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory structure and file list saved to 6.xlsx\n"
+      "Directory structure and file list saved to OldFileTrackingTrial2.xlsx\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "import os\n",
     "import pandas as pd\n",
     "\n",
@@ -54,30 +53,27 @@
     "        \n",
     "        for filename in filenames:\n",
     "            # Create a row with the directory parts and filename\n",
-    "            row = [root_folder] + parts + [filename]\n",
+    "            row = [root_folder] + parts\n",
     "            full_path = os.path.join(dirpath, filename)\n",
     "            paths.append(row)\n",
-    "            file_data.append([full_path, filename])\n",
+    "            file_data.append([filename])\n",
     "\n",
     "    # Determine the maximum number of columns needed\n",
-    "    max_depth = max(len(row) for row in paths) - 1  # subtract 1 for the 'Root Directory' column\n",
+    "    max_depth = max(len(row) for row in paths)\n",
     "\n",
     "    # Normalize the rows to have the same length\n",
     "    for row in paths:\n",
-    "        row.extend([''] * (max_depth - len(row) + 1))  # +1 to account for 'Root Directory'\n",
+    "        row.extend([''] * (max_depth - len(row)))\n",
+    "\n",
+    "    # Add the filenames to the normalized rows\n",
+    "    for i, row in enumerate(paths):\n",
+    "        row.append(file_data[i][0])\n",
     "\n",
     "    # DataFrame from the paths\n",
-    "    columns_structure = ['Root Directory'] + [f'Level {i}' for i in range(1, max_depth + 1)]\n",
+    "    columns_structure = ['Root Directory'] + [f'Level {i}' for i in range(1, max_depth)] + ['File Name']\n",
     "    df_structure = pd.DataFrame(paths, columns=columns_structure)\n",
     "\n",
-    "    # DataFrame for file paths and names\n",
-    "    columns_files = ['File Path', 'File Name']\n",
-    "    df_files = pd.DataFrame(file_data, columns=columns_files)\n",
-    "\n",
-    "    # Combine DataFrames\n",
-    "    df_combined = pd.concat([df_structure, df_files], axis=1)\n",
-    "\n",
-    "    return df_combined\n",
+    "    return df_structure\n",
     "\n",
     "def save_to_excel(df_combined, output_file):\n",
     "    # Save the DataFrame to an Excel file\n",
@@ -85,7 +81,7 @@
     "\n",
     "def main():\n",
     "    root_folder = 'TestDirectory'\n",
-    "    output_file = 'OldFileTracking.xlsx'\n",
+    "    output_file = 'OldFileTrackingTrial2.xlsx'\n",
     "\n",
     "    df_combined = map_directory(root_folder)\n",
     "\n",
