--- a/DirTrackClean.ipynb
+++ b/DirTrackClean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files have been copied, renamed, organized, and the report has been created at newFileTracker2.xlsx\n"
+      "Files have been copied, renamed, organized, and the combined report has been created at CombinedFileTracker22.xlsx\n"
      ]
     }
    ],
@@ -42,6 +42,36 @@
     "from collections import defaultdict\n",
     "import pandas as pd\n",
     "\n",
+    "# Function to map directory structure\n",
+    "def map_directory(root_folder):\n",
+    "    paths = []\n",
+    "    file_data = []\n",
+    "\n",
+    "    for dirpath, dirnames, filenames in os.walk(root_folder):\n",
+    "        relative_path = os.path.relpath(dirpath, root_folder)\n",
+    "        parts = relative_path.split(os.sep)\n",
+    "        \n",
+    "        for filename in filenames:\n",
+    "            row = [root_folder] + parts\n",
+    "            paths.append(row)\n",
+    "            full_path = os.path.join(dirpath, filename)\n",
+    "            file_data.append([filename, full_path])\n",
+    "\n",
+    "    max_depth = max(len(row) for row in paths)\n",
+    "\n",
+    "    for row in paths:\n",
+    "        row.extend([''] * (max_depth - len(row)))\n",
+    "\n",
+    "    for i, row in enumerate(paths):\n",
+    "        row.append(file_data[i][0])\n",
+    "        row.append(file_data[i][1])\n",
+    "\n",
+    "    columns_structure = ['Root Directory'] + [f'Level {i}' for i in range(1, max_depth)] + ['File Name', 'Original Path']\n",
+    "    df_structure = pd.DataFrame(paths, columns=columns_structure)\n",
+    "\n",
+    "    return df_structure\n",
+    "\n",
+    "# Function to copy and rename files\n",
     "def copy_and_rename_files(source_dir, target_dir):\n",
     "    if not os.path.exists(target_dir):\n",
     "        os.makedirs(target_dir)\n",
@@ -51,11 +81,8 @@
     "\n",
     "    for root, _, files in os.walk(source_dir):\n",
     "        for file in files:\n",
-    "            # Get file extension and name without extension\n",
     "            file_ext = os.path.splitext(file)[1]\n",
     "            file_name = os.path.splitext(file)[0]\n",
-    "            \n",
-    "            # Increment file counter to avoid overwriting\n",
     "            file_counter[file_name] += 1\n",
     "            new_file_name = f\"{file_name}_{file_counter[file_name]}{file_ext}\"\n",
     "            \n",
@@ -63,17 +90,18 @@
     "            target_file_path = os.path.join(target_dir, new_file_name)\n",
     "            \n",
     "            shutil.copy2(source_file_path, target_file_path)\n",
-    "            file_info.append((file, target_file_path, file_ext))\n",
+    "            file_info.append((file, target_file_path, file_ext, source_file_path))\n",
     "    \n",
     "    return file_info\n",
     "\n",
+    "# Function to organize files by extension\n",
     "def organize_files_by_extension(target_dir):\n",
     "    file_locations = []\n",
     "\n",
     "    for root, _, files in os.walk(target_dir):\n",
     "        for file in files:\n",
-    "            file_ext = os.path.splitext(file)[1][1:]  # Get extension without dot\n",
-    "            if file_ext:  # Ensure the file has an extension\n",
+    "            file_ext = os.path.splitext(file)[1][1:]\n",
+    "            if file_ext:\n",
     "                ext_folder_path = os.path.join(target_dir, file_ext)\n",
     "                if not os.path.exists(ext_folder_path):\n",
     "                    os.makedirs(ext_folder_path)\n",
@@ -86,30 +114,48 @@
     "    \n",
     "    return file_locations\n",
     "\n",
-    "def create_excel_report(file_info, file_locations, excel_path, base_folder):\n",
+    "# Function to create the final Excel report\n",
+    "def create_combined_report(df_structure, file_info, file_locations, excel_path, base_folder):\n",
     "    data = []\n",
-    "    file_location_dict = {new_path: (old_name, ext) for old_name, new_path, ext in file_info}\n",
+    "    file_location_dict = {new_path: (old_name, ext, orig_path) for old_name, new_path, ext, orig_path in file_info}\n",
     "    \n",
     "    for new_path, final_path, ext in file_locations:\n",
-    "        old_name, original_ext = file_location_dict.get(new_path, (None, None))\n",
-    "        if old_name is not None:\n",
+    "        old_name, original_ext, orig_path = file_location_dict.get(new_path, (None, None, None))\n",
+    "        if orig_path is not None:\n",
     "            folder_name = os.path.basename(os.path.dirname(final_path))\n",
-    "            data.append([old_name, os.path.basename(new_path), base_folder, folder_name])\n",
+    "            data.append([orig_path, os.path.basename(new_path), base_folder, folder_name])\n",
     "    \n",
-    "    df = pd.DataFrame(data, columns=[\"Old Name\", \"New Name\", \"Base Folder\", \"Folder\"])\n",
-    "    df.to_excel(excel_path, index=False)\n",
+    "    df_new_files = pd.DataFrame(data, columns=[\"Original Path\", \"Renamed File Name\", \"New Folder Assignment\", \"Folder\"])\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    source_dir = \"TestDirectory\"  # Specify your source directory here\n",
-    "    target_dir = \"cleanedDir\"  # Specify your target directory here\n",
-    "    excel_path = \"newFileTracker2.xlsx\"  # Specify your Excel report path here\n",
-    "    base_folder = target_dir  # Specify the base folder name here\n",
+    "    # Merge the directory structure DataFrame with the new files DataFrame\n",
+    "    df_merged = pd.merge(df_structure, df_new_files, on='Original Path', how='left')\n",
+    "\n",
+    "    # Drop the unnecessary columns\n",
+    "    df_merged.drop(columns=[\"Original Path\"], inplace=True)\n",
     "    \n",
+    "    # Save the merged DataFrame to the final Excel file\n",
+    "    df_merged.to_excel(excel_path, index=False)\n",
+    "\n",
+    "def main():\n",
+    "    source_dir = 'TestDirectory'   #<-- name for the directory to map and copy/categorize.\n",
+    "    target_dir = 'cleanedDir' #<-- name for new directory\n",
+    "    final_excel_path = 'CombinedFileTracker22.xlsx' #<-- name for excel file\n",
+    "    base_folder = target_dir\n",
+    "\n",
+    "    # Step 1: Map the directory structure\n",
+    "    df_structure = map_directory(source_dir)\n",
+    "    \n",
+    "    # Step 2: Copy, rename, and organize files\n",
     "    file_info = copy_and_rename_files(source_dir, target_dir)\n",
     "    file_locations = organize_files_by_extension(target_dir)\n",
-    "    create_excel_report(file_info, file_locations, excel_path, base_folder)\n",
     "    \n",
-    "    print(f\"Files have been copied, renamed, organized, and the report has been created at {excel_path}\")\n"
+    "    # Step 3: Create a combined report and save it to the final Excel file\n",
+    "    create_combined_report(df_structure, file_info, file_locations, final_excel_path, base_folder)\n",
+    "\n",
+    "    print(f\"Files have been copied, renamed, organized, and the combined report has been created at {final_excel_path}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
